[package]
name = "lemon-tokei"
version = "0.1.0"
edition = "2024"

[dependencies]
tokei = "14.0"
dotenvy = "0.15"
tempfile = "3.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3"
log = "0.4"
cached = "0.59"
actix-web = "4.13"
eyre = "0.6"
env_logger = "0.11"
rsbadges = "1.1"
csscolorparser = "0.8"
